[tool.poetry]
name = "efinance"
version = "0.1.0"
description = ""
authors = ["Ali H. Askar <26202651+alihaskar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
